--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,80 @@
-name: Deploy static content to GitHub Pages
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Magica Studio Pro</title>
+  <style>
+    body {
+      background: linear-gradient(135deg, #0f172a, #1e293b);
+      color: #fff;
+      font-family: "Poppins", Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+      overflow: hidden;
+    }
+    h1 { font-size: 3rem; margin-bottom: 0.5em; }
+    p { color: #cbd5e1; max-width: 600px; margin-bottom: 2em; line-height: 1.5; }
+    button {
+      background: #3b82f6;
+      color: #fff;
+      border: none;
+      padding: 15px 40px;
+      border-radius: 12px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+    }
+    button:hover {
+      background: #2563eb;
+      transform: scale(1.05);
+      box-shadow: 0 6px 20px rgba(37, 99, 235, 0.5);
+    }
+    footer { position: absolute; bottom: 15px; font-size: 0.9rem; color: #94a3b8; }
+  </style>
+</head>
+<body>
+  <h1>🚀 Magica Studio Pro</h1>
+  <p>Crée, édite et publie tes projets avec puissance et style.<br>
+  Télécharge toujours la dernière version ci-dessous 👇</p>
 
-on:
-  push:
-    branches: ["main"]
-  workflow_dispatch:
+  <button id="downloadBtn">Téléchargement en cours...</button>
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  <script>
+    const btn = document.getElementById("downloadBtn");
 
-jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+    // GitHub API : dernier release
+    const owner = "MaxiStudioDev";
+    const repo = "MagicaStudioPro";
 
-    steps:
-      # Récupère le code du repo
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # Configure GitHub Pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      # Upload uniquement le dossier contenant ton site
-      - name: Upload static site
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: '.'  # si ton index.html est à la racine
-          # Si tu mets tes fichiers dans un sous-dossier, par ex 'site', mets path: 'site'
-
-      # Déploye sur GitHub Pages
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    fetch(`https://api.github.com/repos/${owner}/${repo}/releases/latest`)
+      .then(res => res.json())
+      .then(data => {
+        // Cherche l'asset .exe
+        const exeAsset = data.assets.find(a => a.name.endsWith(".exe"));
+        if (exeAsset) {
+          btn.textContent = "Télécharger la dernière version 📦";
+          btn.onclick = () => {
+            window.location.href = exeAsset.browser_download_url;
+          };
+        } else {
+          btn.textContent = "Pas de version .exe trouvée";
+          btn.disabled = true;
+        }
+      })
+      .catch(err => {
+        console.error(err);
+        btn.textContent = "Erreur GitHub API";
+        btn.disabled = true;
+      });
+  </script>
+</body>
+</html>
