--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,141 +1,105 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Magica Studio Pro</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-    
-    * {
-      box-sizing: border-box;
-    }
-    
-    body {
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #fff;
-      font-family: "Poppins", Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-      position: relative;
-    }
-    
-    h1 { 
-      font-size: clamp(2.5rem, 5vw, 3.5rem); 
-      margin-bottom: 0.5em; 
-      font-weight: 700;
-    }
-    
-    p { 
-      color: #cbd5e1; 
-      max-width: 600px; 
-      margin-bottom: 2em; 
-      line-height: 1.5; 
-      font-size: 1.1rem;
-    }
-    
-    button {
-      background: #3b82f6;
-      color: #fff;
-      border: none;
-      padding: 15px 40px;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
-    }
-    
-    button:hover {
-      background: #2563eb;
-      transform: scale(1.05);
-      box-shadow: 0 6px 20px rgba(37, 99, 235, 0.5);
-    }
-    
-    button:disabled {
-      background: #64748b;
-      cursor: not-allowed;
-      transform: none;
-      box-shadow: none;
-    }
-    
-    footer { 
-      position: absolute; 
-      bottom: 15px; 
-      font-size: 0.9rem; 
-      color: #94a3b8; 
-      width: 100%;
-      text-align: center;
-    }
-    
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 2rem;
-      }
-      
-      p {
-        font-size: 1rem;
-      }
-      
-      button {
-        padding: 12px 30px;
-        font-size: 16px;
-      }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Magica Studio Pro</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+    
+    * {
+      box-sizing: border-box;
+    }
+    
+    body {
+      background: linear-gradient(135deg, #0f172a, #1e293b);
+      color: #fff;
+      font-family: "Poppins", Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+      position: relative;
+    }
+    
+    h1 { 
+      font-size: clamp(2.5rem, 5vw, 3.5rem); 
+      margin-bottom: 0.5em; 
+      font-weight: 700;
+    }
+    
+    p { 
+      color: #cbd5e1; 
+      max-width: 600px; 
+      margin-bottom: 2em; 
+      line-height: 1.5; 
+      font-size: 1.1rem;
+    }
+    
+    button {
+      background: #3b82f6;
+      color: #fff;
+      border: none;
+      padding: 15px 40px;
+      border-radius: 12px;
+      font-size: 18px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+    }
+    
+    button:hover {
+      background: #2563eb;
+      transform: scale(1.05);
+      box-shadow: 0 6px 20px rgba(37, 99, 235, 0.5);
+    }
+    
+    button:disabled {
+      background: #64748b;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
+    }
+    
+    footer { 
+      position: absolute; 
+      bottom: 15px; 
+      font-size: 0.9rem; 
+      color: #94a3b8; 
+      width: 100%;
+      text-align: center;
+    }
+    
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+      
+      p {
+        font-size: 1rem;
+      }
+      
+      button {
+        padding: 12px 30px;
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>🚀 Magica Studio Pro</h1>
-  <p>Téléchargez toujours la dernière version de MagicaSetup.exe directement depuis les releases GitHub 👇</p>
+  <h1>🚀 Magica Studio Pro</h1>
+    <p>Cliquez sur le bouton ci-dessous pour accéder à la page de téléchargement sur Itch.io 👇</p>
 
-  <button id="downloadBtn">Charger…</button>
+    <button onclick="window.location.href='https://maxistudiodev.itch.io/magicastudiopro'">
+    Télécharger sur Itch.io 🎮
+  </button>
 
-  <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
+  <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
 
-  <script>
-    const btn = document.getElementById("downloadBtn");
-    const owner = "MaxiStudioDev";
-    const repo = "MagicaStudioPro";
-
-    fetch(`https://api.github.com/repos/${owner}/${repo}/releases/latest`)
-      .then(res => res.json())
-      .then(data => {
-        console.log("Tous les fichiers disponibles:", data.assets);
-        
-        // Cherche uniquement les fichiers .exe et exclut les .zip
-        const exeAssets = data.assets.filter(a => 
-          a.name.toLowerCase().endsWith('.exe') && 
-          !a.name.toLowerCase().endsWith('.zip')
-        );
-        
-        console.log("Fichiers .exe trouvés:", exeAssets);
-        
-        if (exeAssets.length > 0) {
-          // Prend le premier fichier .exe trouvé
-          const exeAsset = exeAssets[0];
-          btn.textContent = `Télécharger ${exeAsset.name} 📦`;
-          btn.onclick = () => {
-            console.log("Téléchargement:", exeAsset.browser_download_url);
-            window.location.href = exeAsset.browser_download_url;
-          };
-        } else {
-          btn.textContent = "Aucun fichier .exe trouvé dans la dernière version";
-          btn.disabled = true;
-          console.log("Aucun .exe trouvé, voici les assets:", data.assets.map(a => a.name));
-        }
-      })
-      .catch(err => {
-        console.error("Erreur API GitHub:", err);
-        btn.textContent = "Erreur de connexion à GitHub";
-        btn.disabled = true;
-      });
-  </script>
-</body>
+  </body>
 </html>
