--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,6 +51,7 @@
       cursor: pointer;
       transition: all 0.2s ease;
       box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+      margin-bottom: 30px; /* Ajout d'une marge pour séparer la nouvelle section */
     }
     
     button:hover {
@@ -64,6 +65,26 @@
       cursor: not-allowed;
       transform: none;
       box-shadow: none;
+    }
+    
+    /* Nouveau Style pour la Section Inférieure */
+    .info-box {
+      background-color: #1f2937; /* Couleur de fond plus claire que le body */
+      border: 2px solid #3b82f6; /* Contour bleu soigné */
+      border-radius: 10px;
+      padding: 30px;
+      max-width: 450px; /* Taille pour le centrage */
+      margin-top: 20px;
+      box-shadow: 0 0 20px rgba(59, 130, 246, 0.2); /* Ombre légère pour le relief */
+      width: 100%;
+    }
+
+    .info-text {
+      font-size: 1.1rem;
+      font-weight: 500;
+      color: #ffffff;
+      margin: 0;
+      line-height: 1.6;
     }
     
     footer { 
@@ -88,6 +109,10 @@
         padding: 12px 30px;
         font-size: 16px;
       }
+      
+      .info-box {
+        padding: 20px;
+      }
     }
   </style>
 </head>
@@ -99,7 +124,13 @@
     Télécharger sur Itch.io 🎮
   </button>
 
-  <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
+    <div class="info-box">
+    <p class="info-text">
+      **Test de Test :** Ceci est une section d'information supplémentaire, ajoutée en bas de la page.
+      Elle est bien centrée et entourée d'un contour soigné pour attirer l'attention sur ce texte important.
+    </p>
+  </div>
+    <footer>© 2025 MaxiStudioDev — Tous droits réservés</footer>
 
   </body>
 </html>
